--- a/src/app/pages/user-management/admin-principal/index/admin-principal-index.component.html
+++ b/src/app/pages/user-management/admin-principal/index/admin-principal-index.component.html
@@ -44,15 +44,11 @@
 
         <ngx-datatable-column name="Nama" prop="fullname">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <a class="direct-edit" (click)="directEdit(row)">{{row.fullname}} </a>
+            <a class="direct-edit" (click)="directDetail(row)">{{row.fullname}} </a>
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column [width]="250" name="Email" prop="email" summary-template="activeCell">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <a class="direct-edit" (click)="directEdit(row)">{{row.email}} </a>
-          </ng-template>
-        </ngx-datatable-column>
+        <ngx-datatable-column [width]="200" name="Email" prop="email" summary-template="activeCell"></ngx-datatable-column>
 
         <ngx-datatable-column name="Terakhir Masuk" prop="last_login">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
@@ -79,7 +75,13 @@
 
         <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value" style="justify-content: center !important">
-            <div class="button-row pl-8">
+            <div class="button-row" style="margin-left: -10px">
+              <button mat-icon-button *ngIf="!permission?.ubah" color="" (click)="directDetail(row)">
+                <mat-icon class="secondary-text">assignment</mat-icon>
+              </button>
+              <button mat-icon-button *ngIf="permission?.ubah" color="" (click)="directEdit(row)">
+                <mat-icon class="secondary-text">edit</mat-icon>
+              </button>
               <button mat-icon-button color="primary" (click)="deleteUser(row.id)">
                 <mat-icon>delete</mat-icon>
               </button>
