--- a/src/app/pages/user-management/paguyuban/edit/paguyuban-edit.component.html
+++ b/src/app/pages/user-management/paguyuban/edit/paguyuban-edit.component.html
@@ -38,27 +38,29 @@
             </mat-error>
           </mat-form-field>
 
-          <div fxLayout="row">
-            <mat-form-field fxFlex="100" class="is-light form-primary">
-              <input matInput type="text" *ngIf="showPassword" formControlName="password" placeholder="Kata sandi baru">
-              <input matInput type="password" *ngIf="!showPassword" formControlName="password" placeholder="Kata sandi baru">
-              <button type="button" mat-button matSuffix mat-icon-button aria-label="Clear" (click)="showPassword = !showPassword">
-                <mat-icon *ngIf="!showPassword">remove_red_eye</mat-icon>
-                <mat-icon *ngIf="showPassword">visibility_off</mat-icon>
-              </button>
-            </mat-form-field>
-          </div>
-          <div fxLayout="row">
-            <mat-form-field fxFlex="100" class="is-light form-primary">
-              <input matInput type="text" *ngIf="showConfirmPassword" formControlName="password_confirmation"
-                placeholder="Konfirmasi kata sandi baru">
-              <input matInput type="password" *ngIf="!showConfirmPassword" formControlName="password_confirmation"
-                placeholder="Konfirmasi kata sandi baru">
-              <button type="button" mat-button matSuffix mat-icon-button aria-label="Clear" (click)="showConfirmPassword = !showConfirmPassword">
-                <mat-icon *ngIf="!showConfirmPassword">remove_red_eye</mat-icon>
-                <mat-icon *ngIf="showConfirmPassword">visibility_off</mat-icon>
-              </button>
-            </mat-form-field>
+          <div *ngIf="!isDetail">
+            <div fxLayout="row">
+              <mat-form-field fxFlex="100" class="is-light form-primary">
+                <input matInput type="text" *ngIf="showPassword" formControlName="password" placeholder="Kata sandi baru">
+                <input matInput type="password" *ngIf="!showPassword" formControlName="password" placeholder="Kata sandi baru">
+                <button type="button" mat-button matSuffix mat-icon-button aria-label="Clear" (click)="showPassword = !showPassword">
+                  <mat-icon *ngIf="!showPassword">remove_red_eye</mat-icon>
+                  <mat-icon *ngIf="showPassword">visibility_off</mat-icon>
+                </button>
+              </mat-form-field>
+            </div>
+            <div fxLayout="row">
+              <mat-form-field fxFlex="100" class="is-light form-primary">
+                <input matInput type="text" *ngIf="showConfirmPassword" formControlName="password_confirmation"
+                  placeholder="Konfirmasi kata sandi baru">
+                <input matInput type="password" *ngIf="!showConfirmPassword" formControlName="password_confirmation"
+                  placeholder="Konfirmasi kata sandi baru">
+                <button type="button" mat-button matSuffix mat-icon-button aria-label="Clear" (click)="showConfirmPassword = !showConfirmPassword">
+                  <mat-icon *ngIf="!showConfirmPassword">remove_red_eye</mat-icon>
+                  <mat-icon *ngIf="showConfirmPassword">visibility_off</mat-icon>
+                </button>
+              </mat-form-field>
+            </div>
           </div>
 
           <div fxLayout="row wrap" fxLayout.lt-md="column" class="py-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
@@ -111,7 +113,7 @@
             </mat-form-field>
           </div>
 
-          <div class="confirm btn-confirm" fxLayout="row" fxLayoutGap="25px">
+          <div *ngIf="!isDetail" class="confirm btn-confirm" fxLayout="row" fxLayoutGap="25px">
             <button mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()">
               SIMPAN
             </button>
