--- a/src/app/pages/inapp-marketing/banner/edit/banner-edit.component.scss
+++ b/src/app/pages/inapp-marketing/banner/edit/banner-edit.component.scss
@@ -297,3 +297,7 @@
     background-color: rgba(255, 255, 255, 0.5);
   }
 }
+
+:host /deep/ .mat-input-element:disabled {
+  color: rgba(0, 0, 0, 1) !important;
+}
