--- a/src/app/pages/newsfeed-management/category/index/category-index.component.html
+++ b/src/app/pages/newsfeed-management/category/index/category-index.component.html
@@ -50,9 +50,12 @@
                 <!-- <button mat-icon-button color="primary" (click)="deleteUser(row.id)">
                   <mat-icon>delete</mat-icon>
                 </button> -->
-                <button mat-icon-button color="" matTooltip="Ubah" (click)="directDetail(row)">
-                    <mat-icon class="secondary-text">edit</mat-icon>
-                  </button>
+                <button mat-icon-button *ngIf="!permission?.ubah" color="" (click)="directDetail(row)">
+                  <mat-icon class="secondary-text">assignment</mat-icon>
+                </button>
+                <button mat-icon-button *ngIf="permission?.ubah" color="" (click)="directEdit(row)">
+                  <mat-icon class="secondary-text">edit</mat-icon>
+                </button>
               </div>
             </ng-template>
           </ngx-datatable-column>
