--- a/src/app/pages/user-management/admin-principal/edit/admin-principal-edit.component.html
+++ b/src/app/pages/user-management/admin-principal/edit/admin-principal-edit.component.html
@@ -93,7 +93,7 @@
             <button mat-stroked-button>Reset Password</button>
           </div> -->
 
-          <div class="confirm btn-confirm" fxLayout="row" fxLayoutGap="25px">
+          <div *ngIf="!isDetail" class="confirm btn-confirm" fxLayout="row" fxLayoutGap="25px">
             <button mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()">
               SIMPAN
             </button>
