--- a/src/app/pages/user-management/field-force/edit/field-force-edit.component.html
+++ b/src/app/pages/user-management/field-force/edit/field-force-edit.component.html
@@ -84,51 +84,36 @@
             </mat-form-field>
           </div>
 
-          <!-- <mat-form-field fxFlex="100" class="is-light">
-                <input matInput placeholder="Kata Sandi Baru" type="password" formControlName="password">
+          <div *ngIf="!isDetail">
+            <div fxLayout="row" class="pt-16" fxLayoutAlign="start center">
+              <h2 class="">Ubah Kata Sandi Baru</h2>
+            </div>
+
+            <div fxLayout="row">
+              <mat-form-field fxFlex="100" class="is-light form-primary">
+                <input matInput type="text" *ngIf="showPassword" formControlName="password" placeholder="Kata Sandi Baru">
+                <input matInput type="password" *ngIf="!showPassword" formControlName="password" placeholder="Kata Sandi Baru">
+                <button type="button" mat-button matSuffix mat-icon-button aria-label="Clear" (click)="showPassword = !showPassword">
+                  <mat-icon *ngIf="!showPassword">remove_red_eye</mat-icon>
+                  <mat-icon *ngIf="showPassword">visibility_off</mat-icon>
+                </button>
               </mat-form-field>
-              <mat-form-field fxFlex="100" class="is-light">
-                <input matInput placeholder="Konfirmasi Kata Sandi" type="password" formControlName="confirmation_password">
-              </mat-form-field> -->
-
-          <div fxLayout="row" class="pt-16" fxLayoutAlign="start center">
-            <h2 class="">Ubah Kata Sandi Baru</h2>
+            </div>
+            <div fxLayout="row">
+              <mat-form-field fxFlex="100" class="is-light form-primary">
+                <input matInput type="text" *ngIf="showConfirmPassword" formControlName="password_confirmation"
+                  placeholder="Konfirmasi Kata Sandi Baru">
+                <input matInput type="password" *ngIf="!showConfirmPassword" formControlName="password_confirmation"
+                  placeholder="Konfirmasi Kata Sandi Baru">
+                <button type="button" mat-button matSuffix mat-icon-button aria-label="Clear" (click)="showConfirmPassword = !showConfirmPassword">
+                  <mat-icon *ngIf="!showConfirmPassword">remove_red_eye</mat-icon>
+                  <mat-icon *ngIf="showConfirmPassword">visibility_off</mat-icon>
+                </button>
+              </mat-form-field>
+            </div>
           </div>
 
-          <div fxLayout="row">
-            <!-- <mat-form-field fxFlex="100" class="is-light form-primary">
-              <input matInput type="password" formControlName="password" placeholder="Kata Sandi Baru">
-            </mat-form-field> -->
-            <mat-form-field fxFlex="100" class="is-light form-primary">
-              <input matInput type="text" *ngIf="showPassword" formControlName="password" placeholder="Kata Sandi Baru">
-              <input matInput type="password" *ngIf="!showPassword" formControlName="password" placeholder="Kata Sandi Baru">
-              <button type="button" mat-button matSuffix mat-icon-button aria-label="Clear" (click)="showPassword = !showPassword">
-                <mat-icon *ngIf="!showPassword">remove_red_eye</mat-icon>
-                <mat-icon *ngIf="showPassword">visibility_off</mat-icon>
-              </button>
-            </mat-form-field>
-          </div>
-          <div fxLayout="row">
-            <!-- <mat-form-field fxFlex="100" class="is-light form-primary">
-              <input matInput type="password" formControlName="password_confirmation" placeholder="Konfirmasi Kata Sandi Baru">
-            </mat-form-field> -->
-            <mat-form-field fxFlex="100" class="is-light form-primary">
-              <input matInput type="text" *ngIf="showConfirmPassword" formControlName="password_confirmation"
-                placeholder="Konfirmasi Kata Sandi Baru">
-              <input matInput type="password" *ngIf="!showConfirmPassword" formControlName="password_confirmation"
-                placeholder="Konfirmasi Kata Sandi Baru">
-              <button type="button" mat-button matSuffix mat-icon-button aria-label="Clear" (click)="showConfirmPassword = !showConfirmPassword">
-                <mat-icon *ngIf="!showConfirmPassword">remove_red_eye</mat-icon>
-                <mat-icon *ngIf="showConfirmPassword">visibility_off</mat-icon>
-              </button>
-            </mat-form-field>
-          </div>
-
-          <!-- <div class="btn-confirm" fxLayout="row" fxLayoutGap="25px">
-                <button mat-stroked-button>Reset Password</button>
-              </div> -->
-
-          <div class="confirm btn-confirm py-48" fxLayout="row" fxLayoutGap="25px">
+          <div *ngIf="!isDetail" class="confirm btn-confirm py-48" fxLayout="row" fxLayoutGap="25px">
             <button mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()">
               SIMPAN
             </button>
