disabled when no have delete access

--- a/src/app/pages/dte/audience/index/audience-index.component.html
+++ b/src/app/pages/dte/audience/index/audience-index.component.html
@@ -74,7 +74,7 @@
               <button mat-icon-button *ngIf="permission?.ubah" color="" (click)="directEdit(row)">
                 <mat-icon class="secondary-text">edit</mat-icon>
               </button>
-              <button mat-icon-button color="primary" [disabled]="row.status === 'approved'" matTooltip="Hapus Audience Grup"
+              <button mat-icon-button color="primary" [disabled]="row.status === 'approved' || !permission?.hapus" matTooltip="Hapus Audience Grup"
                 (click)="deleteAudience(row.id)">
                 <mat-icon>delete</mat-icon>
               </button>
