--- a/src/app/pages/sku-management/product/index/product-index.component.html
+++ b/src/app/pages/sku-management/product/index/product-index.component.html
@@ -80,7 +80,7 @@
               <button mat-icon-button *ngIf="permission?.ubah" color="" matTooltip="Ubah Produk" [routerLink]="['/sku-management', 'product', 'edit', row.id]">
                 <mat-icon class="secondary-text">edit</mat-icon>
               </button>
-              <button mat-icon-button color="primary" matTooltip="Hapus Produk" (click)="deleteProduct(row.id)">
+              <button mat-icon-button color="primary" matTooltip="Hapus Produk" (click)="deleteProduct(row.id)" [ngStyle]="{'cursor': !permission?.hapus ? 'no-drop' : ''}" [disabled]="!permission?.hapus">
                 <mat-icon>delete</mat-icon>
               </button>
             </div>
