--- a/src/app/pages/dte/schedule-program/index/schedule-program-index.component.html
+++ b/src/app/pages/dte/schedule-program/index/schedule-program-index.component.html
@@ -108,7 +108,7 @@
                 <mat-icon *ngIf="row.status_audience === 'approved'" class="orange-500-fg">save_alt</mat-icon>
                 <mat-icon *ngIf="row.status_audience !== 'approved'" class="secondary-text">save_alt</mat-icon>
               </button>
-              <button mat-icon-button color="primary" [disabled]="row.status_scheduler === 'publish'" matTooltip="Hapus"
+              <button mat-icon-button color="primary" [disabled]="row.status_scheduler === 'publish' || !permission?.hapus" matTooltip="Hapus"
                 (click)="deleteStp(row.id)">
                 <mat-icon>delete</mat-icon>
               </button>
