--- a/src/app/pages/sku-management/product/edit/product-edit.component.html
+++ b/src/app/pages/sku-management/product/edit/product-edit.component.html
@@ -46,7 +46,7 @@
                   <mat-chip color="primary" *ngFor="let item of formProductGroup.get('alias')['controls']; let i = index;"
                     [selectable]="selectable" [removable]="removable" (removed)="removeAlias(i)">
                     {{item.get('alias').value}}
-                    <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                    <mat-icon matChipRemove *ngIf="removable && !isDetail">cancel</mat-icon>
                   </mat-chip>
                   <input matInput placeholder="Nama Lain Produk" type="text" [matChipInputFor]="chipList"
                     [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur"
