ganti nama kode batang jadi barcode

--- a/src/app/pages/sku-management/product/create/dialog/scan-barcode-dialog.component.html
+++ b/src/app/pages/sku-management/product/create/dialog/scan-barcode-dialog.component.html
@@ -5,7 +5,7 @@
     <div fxFlex fxLayout="row" fxLayoutAlign="space-between center">
 
       <div fxFlex fxLayout="row" fxLayoutAlign="center center">
-        <span>Pindai Kode Batang Produk</span>
+        <span>Pindai Barcode Produk</span>
       </div>
 
     </div>
