--- a/src/app/pages/user-management/customer/index/customer-index.component.html
+++ b/src/app/pages/user-management/customer/index/customer-index.component.html
@@ -1,6 +1,6 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Daftar Customer'">
+  <page-content-header [contentTitle]="'Daftar Consumer'">
     <div class="button-row" fxLayout="row">
       <!-- <button style="width: 170px;" mat-raised-button aria-label="Login" type="button" [routerLink]="['/user-management','wholesaler','create']">
         <mat-icon>add</mat-icon>BUAT
@@ -13,7 +13,7 @@
   <div class="content p-24" *ngIf="!onLoad">
     <div class="table-wrapper">
       <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
-        <h2 class="pl-8">Daftar Customer</h2>
+        <h2 class="pl-8">Daftar Consumer</h2>
         <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
           <mat-icon>search</mat-icon>
           <mat-form-field class="is-light tab-search">
