--- a/src/app/pages/user-management/customer/detail/customer-detail.component.html
+++ b/src/app/pages/user-management/customer/detail/customer-detail.component.html
@@ -1,6 +1,6 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Detail Customer'">
+  <page-content-header [contentTitle]="'Detail Consumer'">
   </page-content-header>
   <!-- / HEADER -->
   <div class="content p-24" *ngIf="!onLoad">
@@ -8,7 +8,7 @@
 
       <form [formGroup]="formCustomer">
         <div class="ayo-top" fxLayout="row" fxLayoutAlign="space-between center">
-          <h3>Detail Customer</h3>
+          <h3>Detail Consumer</h3>
           <mat-form-field [class]="formCustomer.get('status').value === 'active' ? 'radius-select green' : 'radius-select red'">
             <mat-select formControlName="status">
               <mat-option [value]="status.value" *ngFor="let status of listStatus">{{status.name}}</mat-option>
